duniverse/menhirLib.20200211/test/static/bad/two-prec.mly
%token A B
%start<unit> main

%left foo
%left bar

%%

main:
  A B %prec foo {} %prec bar
