duniverse/menhirLib.20200211/test/static/bad/two-prec.exp
File "two-prec.mly", line 10, characters 2-15:
Error: this production carries two %prec declarations.
